Timecode bar z-index fix

--- a/css/app.css
+++ b/css/app.css
@@ -225,7 +225,7 @@ ul .group .marker-timecode {
     border-radius: 5px;
     height: 30px;
     position: absolute;
-    z-index: 5000;
+    z-index: 5;
     left: -13px;
     top: 27px;
     height: 80%;
